force-app/main/default/objects/TO_Request__c/TO_Request__c.object-meta.xml
<CustomObject>
    <description>FSL - CD TOR Requests</description>
    <label>TO Request</label>
    <nameField>
        <displayFormat>REQ-{000}</displayFormat>
        <label>TO Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TO Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>