force-app/main/default/objects/TO_Request__c/fields/Absence_Detail__c.field-meta.xml
<CustomField>
    <fullName>Absence_Detail__c</fullName>
    <label>Absence Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>