force-app/main/default/objects/TO_Request__c/fields/Deactivated_Resource__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Resource__c</fullName>
    <formula>!ISBLANK(Resource__c)
&amp;&amp;
!Resource__r.IsActive
&amp;&amp;
DATEVALUE(Start__c) &gt;= Resource__r.Inactive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deactivated Resource</label>
    <type>Checkbox</type>
</CustomField>