force-app/main/default/objects/TO_Request__c/fields/Denied__c.field-meta.xml
<CustomField>
    <fullName>Denied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denied</label>
    <type>Checkbox</type>
</CustomField>