force-app/main/default/objects/TO_Request__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>