force-app/main/default/objects/TO_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Company Holiday</fullName>
            </value>
            <value>
                <fullName>Working Off Site</fullName>
            </value>
            <value>
                <fullName>Recognition</fullName>
            </value>
            <value>
                <fullName>TOIL</fullName>
            </value>
            <value>
                <fullName>Jury Duty</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other / Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>