force-app/main/default/objects/TO_Request__c/fields/Local_Finish__c.field-meta.xml
<CustomField>
    <fullName>Local_Finish__c</fullName>
    <formula>Finish__c + (TZO_Hours__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Finish</label>
    <type>DateTime</type>
</CustomField>