force-app/main/default/objects/TO_Request__c/fields/Local_Start__c.field-meta.xml
<CustomField>
    <fullName>Local_Start__c</fullName>
    <formula>Start__c + (TZO_Hours__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Start</label>
    <type>DateTime</type>
</CustomField>