force-app/main/default/objects/TO_Request__c/fields/My_Queue__c.field-meta.xml
<CustomField>
    <fullName>My_Queue__c</fullName>
    <formula>Resource__r.Support_Manager__r.User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Queue</label>
    <type>Checkbox</type>
</CustomField>