force-app/main/default/objects/TO_Request__c/fields/My_Request__c.field-meta.xml
<CustomField>
    <fullName>My_Request__c</fullName>
    <formula>Resource__r.User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Request</label>
    <type>Checkbox</type>
</CustomField>