force-app/main/default/objects/TO_Request__c/fields/My_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>My_Team_Member__c</fullName>
    <formula>Resource__r.User__r.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team Member</label>
    <type>Checkbox</type>
</CustomField>