force-app/main/default/objects/TO_Request__c/fields/RA_Name__c.field-meta.xml
<CustomField>
    <fullName>RA_Name__c</fullName>
    <formula>Resource_Absence__r.AbsenceNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RA Name</label>
    <type>Text</type>
</CustomField>