force-app/main/default/objects/TO_Request__c/fields/Req_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Date__c</fullName>
    <formula>DATEVALUE(Local_Start__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Req Date</label>
    <type>Date</type>
</CustomField>