force-app/main/default/objects/TO_Request__c/fields/Request_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted__c</fullName>
    <formula>IF(
    ISBLANK(Submitted__c)
,
    CreatedDate
,
    Submitted__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Submitted</label>
    <type>DateTime</type>
</CustomField>