force-app/main/default/objects/TO_Request__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>TO Requests</relationshipLabel>
    <relationshipName>TO_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>