force-app/main/default/objects/TO_Request__c/fields/Resource_Absence__c.field-meta.xml
<CustomField>
    <fullName>Resource_Absence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Absence</label>
    <referenceTo>ResourceAbsence</referenceTo>
    <relationshipLabel>TO Requests</relationshipLabel>
    <relationshipName>TO_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>