force-app/main/default/objects/TO_Request__c/fields/Special_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Special_Request_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Request Type</label>
    <type>Checkbox</type>
</CustomField>