force-app/main/default/objects/TO_Request__c/fields/Start_Minus_60__c.field-meta.xml
<CustomField>
    <fullName>Start_Minus_60__c</fullName>
    <formula>IF(
    CreatedDate + (1.25/24) &gt; Start__c
,
    CreatedDate
,
    Start__c - (60/1440)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Minus 60</label>
    <type>DateTime</type>
</CustomField>