force-app/main/default/objects/TO_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    Approved__c
    &amp;&amp;
    Cancellation_Requested__c
,
    &quot;Approved (Cancellation Requested)&quot;
,
    IF(
        Approved__c
    ,
        &quot;Approved&quot;
    ,
        IF(
            Denied__c
        ,
            &quot;Denied&quot;
        ,
            IF(
                Canceled__c
            ,
                &quot;Canceled&quot;
            ,
                IF(
                    Cancellation_Requested__c
                ,
                    &quot;Pending (Cancellation Requested)&quot;
                ,
                    &quot;Pending&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>