force-app/main/default/objects/TO_Request__c/fields/Text_Date__c.field-meta.xml
<CustomField>
    <fullName>Text_Date__c</fullName>
    <label>Text Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>