force-app/main/default/objects/TO_Request__c/fields/Text_Finish__c.field-meta.xml
<CustomField>
    <fullName>Text_Finish__c</fullName>
    <label>Text Finish</label>
    <length>50</length>
    <type>Text</type>
</CustomField>