force-app/main/default/objects/TO_Request__c/fields/TZ_O_Resource__c.field-meta.xml
<CustomField>
    <fullName>TZ_O_Resource__c</fullName>
    <formula>IF(
    TZO_DSL__c 
,
    Resource__r.User__r.UTC_Offset__c + Resource__r.User__r.UTC_DSL__c
,
    Resource__r.User__r.UTC_Offset__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZ O Resource</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>