force-app/main/default/objects/TO_Request__c/fields/TZO_Hours__c.field-meta.xml
<CustomField>
    <fullName>TZO_Hours__c</fullName>
    <formula>TZ_O_Resource__c - TZO_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TZO Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>