force-app/main/default/objects/TO_Request__c/fields/TZO_Resource__c.field-meta.xml
<CustomField>
    <fullName>TZO_Resource__c</fullName>
    <label>TZO Resource</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>