force-app/main/default/objects/TO_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <group>FSL_Admin_Dispatch</group>
    </sharedTo>
</ListView>