force-app/main/default/objects/TO_Request__c/listViews/EMEA_Cancel_Requests.listView-meta.xml
<ListView>
    <fullName>EMEA_Cancel_Requests</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Status__c</columns>
    <columns>Note__c</columns>
    <columns>Request_Submitted__c</columns>
    <columns>Day__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TOR_Group__c</field>
        <operation>equals</operation>
        <value>EMEA CD,India CD</value>
    </filters>
    <filters>
        <field>Cancellation_Requested__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Deactivated_Resource__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>EMEA - Cancel Requests</label>
    <language>en_US</language>
    <sharedTo>
        <group>FSL_Admin_Dispatch</group>
    </sharedTo>
</ListView>