force-app/main/default/objects/TO_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Requests</label>
    <language>en_US</language>
</ListView>