force-app/main/default/objects/TO_Request__c/listViews/NAM_CD_Pending.listView-meta.xml
<ListView>
    <fullName>NAM_CD_Pending</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Start__c</columns>
    <columns>Finish__c</columns>
    <columns>Status__c</columns>
    <columns>Note__c</columns>
    <columns>Request_Submitted__c</columns>
    <columns>Day__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TOR_Group__c</field>
        <operation>equals</operation>
        <value>US CD,Can CD,Can Res,Can T1,Can T2</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Cancellation_Requested__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Deactivated_Resource__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Pending_Under_Review__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Start__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>NAM CD - Pending</label>
    <language>en_US</language>
    <sharedTo>
        <group>FSL_Admin_Dispatch</group>
    </sharedTo>
</ListView>